<resources>
    <string name="app_name">ProFinder</string>
    <string name="user_name">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="course_and_year">COURSE &amp; YEAR</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="custom_personal_info">CUSTOM PERSONAL INFO</string>
    <string name="background_info">BACKGROUND</string>
    <string name="courses_info">COURSES</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="create_acc">CREATE AN ACCOUNT</string>
    <string name="part_one">Part 1</string>
    <string name="part_two">Part 2</string>
    <string name="part_three">Part 3</string>
    <string name="back_to_login">Back to Login</string>
    <string name="back">BACK</string>
    <string name="next_continue">NEXT</string>
    <string name="student">STUDENT</string>
    <string name="teacher">TEACHER</string>
    <string name="choose_acc_type">Choose an account type</string>
    <string name="bottom_background_vector">bottom_background_vector</string>
    <string name="profinder_logo">profinder_logo</string>
    <string name="username_hint">e.g. JohnDoe123</string>
    <string name="email_hint">e.g. johndoe123@email.com</string>
    <string name="password_hint">e.g. johndoe412869</string>
    <string name="course_hint">e.g. BS Computer Science</string>
    <string name="phone_number_hint">e.g. 09876543210</string>
    <string name="enter_text_hint">Enter your text here…</string>
    <string name="browse_instructors">Browse Instructors</string>
    <string name="search">Search…</string>
    <string name="search_icon">search icon</string>
    <string name="teacher_profile_image">teacher profile image</string>
    <string name="teacher_name_placeholder">Teacher name</string>
    <string name="current_location">Current location</string>
    <string name="location_icon">location icon</string>
    <string name="red_rectangle_bg">red rectangle bg</string>
    <string name="browse_icon">browse icon</string>
    <string name="profile_icon">profile icon</string>
    <string name="change_bio">Change Bio</string>
    <string name="logout">LOGOUT</string>
    <string name="time">Time</string>
    <string name="view_bio">View Bio</string>
    <string name="update_location">Update Location</string>
    <string name="location_history">Location History</string>
    <string name="back_button">back button</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="arrived">Arrived</string>
    <string name="departed">Departed</string>
    <string name="enter_new_location">Enter New Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">SETTINGS</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about_the_developer">About the Developer</string>
    <string name="application_made_by">Application made by:</string>
    <string name="close">Close</string>
    <string name="josh_mark_t_piodos">Josh Mark T. Piodos</string>
    <string name="bachelor_of_science_in_computer_science">Bachelor of Science in Computer Science</string>
    <string name="cebu_institute_of_technology_university">Cebu Institute of Technology - University</string>
    <string name="confirm_logout">CONFIRM LOGOUT</string>
    <string name="logout_confirmation_prompt">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="upload_image">Upload Image</string>
    <string name="back_btn">back button</string>
    <string name="bio">BIO\n</string>
    <string name="location">Location</string>
    <string name="hobbies_title">Hobbies:</string>
    <string name="hobbies">Playing video games\nWatchinganime\nReading manga\\light novels\nCosplaying</string>
    <string name="socials">Socials:</string>
    <string name="instagram_icon">instagram_icon</string>
    <string name="facebook_icon">facebook_icon</string>
    <string name="youtube_icon">youtube_icon</string>
    <string name="vicinity_map">Vicinity Map</string>
    <string name="building_locator">Building Locator</string>
    <string name="your_profile">Your Profile</string>
    <string name="have_a_cool_and_normal_day">Have a cool and normal day!</string>
    <string name="search_teacher">Search teacher...</string>
</resources>