<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/profile_image_placeholder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/profile_placeholder_icon"
        android:layout_marginTop="30dp"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_icon" />

    <TextView
        android:id="@+id/username_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profile_image_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/email_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/username_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/current_location_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter"
        android:text="@string/current_location"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_lbl" />

    <ImageView
        android:id="@+id/current_location_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/location_icon"
        app:layout_constraintBottom_toBottomOf="@id/current_location_lbl"
        app:layout_constraintTop_toTopOf="@id/current_location_lbl"
        app:layout_constraintEnd_toStartOf="@id/current_location_lbl"/>

    <TextView
        android:id="@+id/time_lbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAlignment="center"
        android:fontFamily="@font/inter"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintWidth_min="300dp"
        app:layout_constraintWidth_max="500dp"
        app:layout_constraintTop_toBottomOf="@id/current_location_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/background_lbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_min="300dp"
        app:layout_constraintWidth_max="500dp"
        android:text="@string/background_info"
        android:textAlignment="textStart"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/time_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/courses_lbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_min="300dp"
        app:layout_constraintWidth_max="500dp"
        android:text="@string/courses_info"
        android:textAlignment="textStart"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/background_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/location_history_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/location_history"
        android:background="@drawable/rounded_corner_box"
        android:fontFamily="@font/inter"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/courses_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>