<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/profile_image_placeholder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/profile_placeholder_icon"
            android:layout_marginTop="30dp"
            app:layout_constraintWidth_percent=".5"
            app:layout_constraintWidth_max="300dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/profile_icon" />

        <TextView
            android:id="@+id/username_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/profile_image_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/email_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/username_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/course_and_year_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_min="300dp"
            app:layout_constraintWidth_max="500dp"
            android:text="@string/course_and_year"
            android:textAlignment="textStart"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/email_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/phone_number_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_min="300dp"
            app:layout_constraintWidth_max="500dp"
            android:text="@string/phone_number"
            android:textAlignment="textStart"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/course_and_year_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/custom_personal_info_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_min="300dp"
            app:layout_constraintWidth_max="500dp"
            android:text="@string/custom_personal_info"
            android:textAlignment="textStart"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/phone_number_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/change_bio_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/change_bio"
            android:background="@drawable/rounded_corner_box"
            android:fontFamily="@font/inter"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/custom_personal_info_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/red_rectangle_bg"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:src="@drawable/red_rectangle"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/red_rectangle_bg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

