<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/vector_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constrainedHeight="true"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/bottom_background_vector"/>

    <TextView
        android:id="@+id/update_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_location"
        android:fontFamily="@font/inter"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/arrived_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/arrived"
        android:textSize="24sp"
        android:background="@drawable/rounded_corner_box"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/update_location_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/departed_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/departed"
        android:textSize="24sp"
        android:background="@drawable/rounded_corner_box"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/arrived_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/update_location_tf"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:hint="@string/enter_new_location"
        app:layout_constraintTop_toBottomOf="@id/departed_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <Button
        android:id="@+id/confirm_update_location_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/update_location"
        android:textSize="24sp"
        android:background="@drawable/rounded_corner_box"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/update_location_tf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>