<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="325dp"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/red_rectangle_bg"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:src="@drawable/red_rectangle"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/red_rectangle_bg" />

    <TextView
        android:id="@+id/confirm_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_logout"
        android:textAlignment="center"
        android:fontFamily="@font/inter"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/cit_yellow"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/confirm_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_confirmation_prompt"
        android:textAlignment="center"
        android:fontFamily="@font/inter"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/red_rectangle_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_prompt">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/rounded_corner_box"
            app:backgroundTint="@null"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_logout_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/rounded_corner_box"
            app:backgroundTint="@null"
            android:backgroundTint="@color/cit_red"
            android:textColor="@color/cit_yellow"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>