<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/vector_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constrainedHeight="true"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/bottom_background_vector"/>

    <TextView
        android:id="@+id/change_bio_lbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_bio"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/inter"
        app:layout_constraintWidth_min="300dp"
        app:layout_constraintWidth_max="500dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/course_year_lbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/course_and_year"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/inter"
        app:layout_constraintWidth_min="300dp"
        app:layout_constraintWidth_max="500dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/change_bio_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/course_year_tf"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_border"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="20sp"
        android:backgroundTint="@color/light_grey"
        android:textColor="@color/black"
        app:layout_constraintWidth_min="300dp"
        app:layout_constraintWidth_max="500dp"
        app:layout_constraintTop_toBottomOf="@id/course_year_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/course_hint"/>

    <TextView
        android:id="@+id/phone_number_lbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/inter"
        app:layout_constraintWidth_min="300dp"
        app:layout_constraintWidth_max="500dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/course_year_tf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/phone_number_tf"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/light_grey"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintWidth_min="300dp"
        app:layout_constraintWidth_max="500dp"
        app:layout_constraintTop_toBottomOf="@id/phone_number_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="phone"
        android:autofillHints="phone"
        android:hint="@string/phone_number_hint"/>

    <TextView
        android:id="@+id/custom_info_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/custom_personal_info"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/inter"
        app:layout_constraintWidth_min="300dp"
        app:layout_constraintWidth_max="500dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/phone_number_tf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/custom_info_tf"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_border"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_grey"
        android:minLines="1"
        android:maxLength="5"
        android:scrollbars="vertical"
        android:gravity="top|start"
        app:layout_constraintWidth_min="300dp"
        app:layout_constraintWidth_max="500dp"
        app:layout_constraintTop_toBottomOf="@id/custom_info_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        android:hint="@string/enter_text_hint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_changes"
        android:textSize="24sp"
        android:background="@drawable/rounded_corner_box"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/custom_info_tf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>